instagram on homepage

--- a/poc/instagram/test2.html
+++ b/poc/instagram/test2.html
@@ -76,6 +76,7 @@
 </head>
 
 <body>
+test2.html : test instagram
 <div id="instagram-feed1" class="instagram_feed"></div>
 <script src="js/jquery.instagramFeed.min.js"></script>
 <script>
